Fixed various paddings and spacings between items and font-sizes

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,9 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
+  gap: 2rem;
+  justify-content: center;
+  /* align-items: center; */
 }
 
 .section--selected-game {
@@ -72,24 +75,30 @@ body {
   align-items: center;
 }
 
+.selected-game-name {
+  font-size: 4.4rem;
+}
+
 .quick-view-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-column: 1 / 3;
-  gap: 3rem;
+  column-gap: 10rem;
   justify-self: center;
-  padding: 2.4rem 0;
+  align-items: center;
+  padding: 1.2rem 0;
 }
 
 .test-circle {
   background-color: green;
-  width: 8rem;
-  height: 8rem;
+  width: 12rem;
+  height: 12rem;
   border-radius: 50%;
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
 }
 
 .character-profile--container {
+  padding: 2.4rem;
   justify-self: center;
   align-items: center;
 }
@@ -99,12 +108,15 @@ body {
 }
 
 .character-data-grid {
+  font-size: 1.6rem;
   display: grid;
   gap: 2rem;
   grid-template-columns: 1fr 1fr;
+  padding: 1.2rem 0;
 }
 
 .character-description--container {
+  padding: 2.4rem;
   text-align: center;
 }
 
